; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/ext/extr_egl_khr_lock_surface_client.c_lock_surface_check_attribs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/ext/extr_egl_khr_lock_surface_client.c_lock_surface_check_attribs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EGL_TRUE = common dso_local global i32 0, align 4
@EGL_NONE = common dso_local global i32 0, align 4
@EGL_READ_SURFACE_BIT_KHR = common dso_local global i32 0, align 4
@EGL_WRITE_SURFACE_BIT_KHR = common dso_local global i32 0, align 4
@EGL_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @lock_surface_check_attribs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lock_surface_check_attribs(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @EGL_TRUE, align 4
  store i32 %13, i32* %4, align 4
  br label %52

14:                                               ; preds = %3
  br label %15

15:                                               ; preds = %14, %51
  %16 = load i32*, i32** %5, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %5, align 8
  %18 = load i32, i32* %16, align 4
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @EGL_NONE, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %15
  %23 = load i32, i32* @EGL_TRUE, align 4
  store i32 %23, i32* %4, align 4
  br label %52

24:                                               ; preds = %15
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i32 1
  store i32* %26, i32** %5, align 8
  %27 = load i32, i32* %25, align 4
  store i32 %27, i32* %9, align 4
  %28 = load i32, i32* %8, align 4
  switch i32 %28, label %48 [
    i32 128, label %29
    i32 129, label %35
  ]

29:                                               ; preds = %24
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  %32 = zext i1 %31 to i64
  %33 = select i1 %31, i32 1, i32 0
  %34 = load i32*, i32** %6, align 8
  store i32 %33, i32* %34, align 4
  br label %50

35:                                               ; preds = %24
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* @EGL_READ_SURFACE_BIT_KHR, align 4
  %38 = load i32, i32* @EGL_WRITE_SURFACE_BIT_KHR, align 4
  %39 = or i32 %37, %38
  %40 = xor i32 %39, -1
  %41 = and i32 %36, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %35
  %44 = load i32, i32* @EGL_FALSE, align 4
  store i32 %44, i32* %4, align 4
  br label %52

45:                                               ; preds = %35
  %46 = load i32, i32* %9, align 4
  %47 = load i32*, i32** %7, align 8
  store i32 %46, i32* %47, align 4
  br label %50

48:                                               ; preds = %24
  %49 = load i32, i32* @EGL_FALSE, align 4
  store i32 %49, i32* %4, align 4
  br label %52

50:                                               ; preds = %45, %29
  br label %51

51:                                               ; preds = %50
  br label %15

52:                                               ; preds = %48, %43, %22, %12
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
